# esp32_project

./: .gitignore  CMakeLists.txt  README.md  esp32_webserver.html  index.html  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: adc.h  defines.h  esp32-adc.h  esp32-defines.h  esp32-gpio.h  esp32-http-server.h  esp32-i2c.h  esp32-i2c_rw.h  esp32-mqtt.h  esp32-wifi.h  gpio.h  htth_server.h  i2c.h  mpu6050.c  mpu6050.h  mqtt.h  payload.h  queue.h  timestamp.h  wifi.h
main/src/: cJSON.c  cJSON_Utils.c  esp32-adc.c  esp32-gpio.c  esp32-http-server.c  esp32-i2c_rw.c  esp32-wifi.c  esp32_i2c.c  mpu6050.c  payload.c  teste.hpp  timestamp.c
